# bdrustfun

./: README.md
cards_permutations/: Cargo.toml  README.md
cards_permutations/src/: main.rs
inning_sim/: Cargo.toml  README.md
inning_sim/src/: GameState.rs  main.rs
