[package]
name = "inning_sim"
version = "0.1.0"
authors = ["Ben Dilday <ben.dilday.phd@gmail.com>"]

[dependencies]
rand = { git = "https://github.com/bdilday/rand", branch = "master"}
statistical = "0.1.1"
rayon = "1.0.2"
clap = "2.32.0"
serde_json = "1.0.30"
serde = "1.0.79"
serde_derive = "1.0.79"